<?xml version="1.0"?>
<package format="2">
  <name>cddeigen</name>
  <version>0.0.0</version>
  <description>The cddeigen package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp"></maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libcdd-dev</depend>

</package>
